public/style.css
@font-face {
    font-family: 'norwester'; /*a name to be used later*/
    src: url('/fonts/norwester.ttf'); /*URL to font*/
}

a {
  text-decoration: none;
  color: #414141;
}

a:hover {
  -webkit-text-stroke: 1px black;
  color: #414141;
}

a:visited {
  color: #414141;
}

body {
  /*font: helvetica;*/
  font-family: sans-serif;
  margin: 0;
  background-color: #F8F5E1;
  
  font: courier;
  font-family: monospace;
  font-size: 130%;
  color: #414141;
}

div {
  /*border: 1px solid #d3d3d3;*/
}

img.burger {
  width: 300px;
  height: 300px;
  margin-top: 0px;
}

h1 {
  margin: 0;
  font-family: 'norwester';
}

h2 {
  margin: 0;
}

h3 {
  margin: 0;
}

div.header {
  color: #FFC125;
  background-color: #0e1717;
  -webkit-text-stroke: 0.5px black;
  padding: 10px 0px 10px 30px;
  width: 100%;
}

div.header h3 {
  font-family: 'norwester';
}

div.main {
  background-color: #F8F5E1;
  display: flex;
  margin-top: 40px;
  margin-right: 40px;
  padding-left: 30px;
  background: url(/images/burgersketch.png) bottom right no-repeat;
  background-size: contain;
}

div.page_title {
  margin-bottom: 30px;
}

div.deals {
  display: flex;
  margin: 0;

}

div.deal {
  background-color: #F8F5E1;
  opacity: 0.9;
  margin: 10px;
  padding: 10px;
  border: 0.1px solid #414141;
}

div.deal p {
  margin: 0.3em 0em 0.3em 1em;
}

div.deal ul {
  margin: 0.3em 0em 0.3em 1em;
}

nav {
  margin: 0px;
  margin-right: 30px;
  /*margin-top: 10px;*/
}

nav ul {
  padding: 0;
  margin: 0;
  font-family: 'norwester';
}

nav ul li ul {
  padding-left: 5px;
  margin: 0;
  font: courier;
  font-family: monospace;
}

nav li {
  list-style-type: none;
  margin-bottom: 5px;

}

